--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
                         <div class="grid">
                             <div class="grid-sizer"></div>
                             <div class="grid-item">
-                                <a class="venobox" data-gall="ads" href="image\ads\ads-1.gif">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-18.jpg">
                                     <div class="grid-view">
                                         <div>
                                             <p>VIEW</p>
@@ -630,11 +630,33 @@
                                         </div>
                                     </div>
                                 </a>
-                                <img class="grid-img" src="image\dm\dm-1.jpg" />
+                                <img class="grid-img" src="image\ads\ads-18.jpg" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-19.jpg">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-19.jpg" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-20.jpg">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-20.jpg" />
                             </div>
 
                             <div class="grid-item">
-                                <a class="venobox" data-gall="ads" href="image\ads\ads-1.gif">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-2.jpg">
                                     <div class="grid-view">
                                         <div>
                                             <p>VIEW</p>
@@ -642,7 +664,172 @@
                                         </div>
                                     </div>
                                 </a>
-                                <img class="grid-img" src="image\ads\ads-1.gif" />
+                                <img class="grid-img" src="image\ads\ads-2.jpg" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-3.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-3.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-4.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-4.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-5.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-5.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-6.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-6.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-7.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-7.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-8.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-8.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-9.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-9.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-10.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-10.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-11.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-11.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-12.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-12.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-13.jpg">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-13.jpg" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-14.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-14.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-15.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-15.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-16.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-16.gif" />
+                            </div>
+                            <div class="grid-item">
+                                <a class="venobox" data-gall="ads" href="image\ads\ads-17.gif">
+                                    <div class="grid-view">
+                                        <div>
+                                            <p>VIEW</p>
+                                            <img class="view-icon" src="image/zoom.svg">
+                                        </div>
+                                    </div>
+                                </a>
+                                <img class="grid-img" src="image\ads\ads-17.gif" />
                             </div>
                         </div>
                     </div>
