--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!--  大標 -->
             <div class="text-right">
                 <h1 class="display-4 text-uppercase">ABO's<br>Design Portfolio</h1>
-                <p>Hello, I am Abo. Welcome to Abo's design portfolio website.</p>
+                <p>Hello, I am Abo. Welcome to my design portfolio website.</p>
             </div>
 
             <div class="arrow">
@@ -308,7 +308,7 @@
                         <div class="grid">
                             <div class="grid-sizer"></div>
                             <div class="grid-item">
-                                <a class="venobox" data-gall="ui" href="image\banner\carousel.jpg">
+                                <a class="venobox" data-gall="ui" href="image\ui\ui-1.jpg">
                                     <div class="grid-view">
                                         <div>
                                             <p>VIEW</p>
@@ -316,18 +316,7 @@
                                         </div>
                                     </div>
                                 </a>
-                                <img class="grid-img" src="image\banner\carousel.jpg" />
-                            </div>
-                            <div class="grid-item">
-                                <a class="venobox" data-gall="ui" href="image\banner\HAAA0006.jpg">
-                                    <div class="grid-view">
-                                        <div>
-                                            <p>VIEW</p>
-                                            <img class="view-icon" src="image/zoom.svg">
-                                        </div>
-                                    </div>
-                                </a>
-                                <img class="grid-img" src="image\banner\HAAA0006.jpg" />
+                                <img class="grid-img" src="image\ui\ui-01.jpg" />
                             </div>
                         </div>
                     </div>
@@ -1109,7 +1098,6 @@
                     <div class="contact col-12 text-center py-5">
                         <strong><i class="fas fa-phone align-baseline"></i> 0922-111-104</strong>
                         <strong><i class="far fa-envelope"></i> ray110022@gmail.com</strong>
-                        <p>超過晚上12點不要打給我<br> 因為我睡了</p>
                     </div>
                 </div>
             </div>
