--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
             <div class="portfolio-wrapper">
 
                 <div data-portfolio="portfolio-ui" class="portfolio-wrap active">
-                    <div class="container">
-                        <div class="grid">
+                    <div class="container text-center">
+                        <!-- <div class="grid">
                             <div class="grid-sizer"></div>
                             <div class="grid-item">
                                 <a class="venobox" data-gall="ui" href="image\ui\ui-1.jpg">
@@ -318,7 +318,10 @@
                                 </a>
                                 <img class="grid-img" src="image\ui\ui-01.jpg" />
                             </div>
-                        </div>
+                        </div> -->
+                        <a class="btn  btn-outline-light btn-xl px-3" target="_blank" href="https://xd.adobe.com/view/f4d39b95-3624-4c68-722d-500c208ff4b1-82e2/" ><i class="fas fa-link mr-2"></i>明洞RWD官網</a> <br>
+                        <small class="text-muted">*前往Adobe XD Prototype</small>
+                        <img class="grid-img mt-3" src="image\ui\ui-1.jpg"  width="100%"/>
                     </div>
                 </div>
 
