--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
     <link rel="shortcut icon" type=image/x-icon href="https://ray110022.github.io/Portfolio/image/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://ray110022.github.io/Portfolio/image/favicon-iphone.png">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131000931-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-131000931-1');
+</script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
@@ -319,9 +329,10 @@
                                 <img class="grid-img" src="image\ui\ui-01.jpg" />
                             </div>
                         </div> -->
-                        <a class="btn  btn-outline-light btn-xl px-3" target="_blank" href="https://xd.adobe.com/view/f4d39b95-3624-4c68-722d-500c208ff4b1-82e2/" ><i class="fas fa-link mr-2"></i>明洞RWD官網</a> <br>
+                        <a class="btn  btn-outline-light btn-xl px-3" target="_blank" href="https://xd.adobe.com/view/f4d39b95-3624-4c68-722d-500c208ff4b1-82e2/"><i
+                                class="fas fa-link mr-2"></i>明洞RWD官網</a> <br>
                         <small class="text-muted">*前往Adobe XD Prototype</small>
-                        <img class="grid-img mt-3" src="image\ui\ui-1.jpg"  width="100%"/>
+                        <img class="grid-img mt-3" src="image\ui\ui-1.jpg" width="100%" />
                     </div>
                 </div>
 
