--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <p class="h1" style="color: #967958; ">ABOUT</p>
                     </div>
                     <div id="photo" class="col-lg-4 text-center pb-3 pb-sm-0">
-                        <img class="about-img" src="image/photo.jpg" width="70%" alt="photo" style="border-radius: 50%">
+                        <img class="about-img" src="image/photo-.jpg" width="70%" alt="photo" style="border-radius: 50%">
                     </div>
                     <article class="col-lg-8 pt-4 pt-lg-1 px-4 text-center text-lg-left" style="letter-spacing: 2px; font-size: .85rem; line-height: 1.8; color: #bbb;">
                         <p>Hello! 我是雷富堡，擁有5年的電商美編設計經驗。<br> 雖然非設計相關科系出身，但憑自身對設計的熱情及敏銳度，從設計零經驗到自學設計軟體已累計許多Banner / DM /
