--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!--控制手機顯示比例固定-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--控制手機顯示禁止縮放-->
-    <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport"
+        content="target-densitydpi=device-dpi, width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <!--SEO-->
     <meta name="description" content="ABO's Design Portfolio" />
@@ -30,24 +31,25 @@
 
     <!-- Favicons -->
     <link rel="shortcut icon" type=image/x-icon href="https://ray110022.github.io/Portfolio/image/favicon.ico">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://ray110022.github.io/Portfolio/image/favicon-iphone.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114"
+        href="https://ray110022.github.io/Portfolio/image/favicon-iphone.png">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131000931-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'UA-131000931-1');
-</script>
+        gtag('config', 'UA-131000931-1');
+    </script>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+        integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!-- fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!--  style -->
     <link rel="stylesheet" href="style/all.css">
     <link rel="stylesheet" href="style/cubeportfolio.css">
@@ -144,10 +146,11 @@
                         <img class="about-img" src="image/photo.jpg" width="70%" alt="photo" style="border-radius: 50%">
                     </div>
                     <article class="col-lg-8 pt-4 pt-lg-1 px-4 text-center text-lg-left">
-                        <p>Hello! 我是雷富堡，擁有5年的電商美編設計經驗。<br> 雖然非設計相關科系出身，但憑自身對設計的熱情及敏銳度，從設計零經驗到自學設計軟體已累計許多Banner / DM /
-                            EDM / 海報 / LOGO / 包裝設計等平面作品。</p>
-                        <p>在上一家就職的電商公司也經歷規劃過2個美妝/保養電商RWD網站、APP的UI設計，自此引起了我對UI設計工作高度的興趣。</p>
-                        <p>離開公司後，開始自行進修 <span style="color: #4dc97d; ">網頁設計</span> & <span style="color: #4dc97d; ">UI介面設計</span>，並持續透過線上課程與網路資源來提升設計技能及知識。
+                        <p>Hello! 我是雷富堡，擁有6年的設計經驗。<br> 雖然非設計相關科系出身，但憑自身對設計的熱情及敏銳度，從設計零經驗到自學設計軟體已累計許多平面設計&UI等相關作品。</p>
+                        <p>在上一家公司是擔任UI Designer，負責公司產品 Web / APP 的UI設計與優化，參與專案開發期間也累積了許多實作經驗。
+                            同時也協同行銷部門製作社群平台行銷素材。</p>
+                        <p>擅長簡約清新的設計風格，對於圖片編排、版面規劃尤其在行，
+                            平時也經常在MyDesy、Behance、Pinterest  這些網站補充及養成設計靈感。
                         </p>
                     </article>
                 </div>
@@ -211,16 +214,50 @@
 
                 <div class="timeline-section mb-5">
                     <!--  經歷_1 -->
+                    <div class="row timeline-pointer mb-5 flex-md-row-reverse">
+                        <div class="col-11 col-md-5 mr-md-auto ml-auto mt-1">
+                            <div class="card">
+                                <div class="card-header even">
+                                    <h6 class="card-title m-0 font-weight-bold">2019.02 ~ 2020.04 &nbsp; Dropbuy | UI
+                                        Designer
+                                    </h6>
+                                </div>
+                                <div class="card-body">
+                                    <div class="card-text">
+                                        <p>主要負責產品設計，協助定義、改善使用者體驗。<br>
+                                            任職期間參與了跨境快遞媒合平台APP的UI設計，專案角色為定義產品使用流程、製作原型、制定設計規範。
+                                            雖然開發過程經常因使用流程問題阻礙進度，但也因透過與團隊大量的溝通而得以順利進行。
+                                        </p>
+                                        <p>
+                                            APP上線後同時也規劃設計了產品的RWD官網，內容包含APP形象官網及跨境快遞網站，作品可以於面試現場展示。<br>
+                                            <a href="https://apps.apple.com/tw/app/golagola-%E8%B7%A8%E5%A2%83%E5%BF%AB%E9%81%9E%E5%AA%92%E5%90%88%E5%B9%B3%E5%8F%B0/id1458075685"
+                                                target="_blank" class="px-3 mt-2 btn btn-outline-light btn-sm">APP介紹</a>
+                                            <small class="st-text-color">*APP可以下載，但沒有在營運</small>
+                                        </p>
+                                        <hr>
+                                        <p>
+                                            後期主要在維護網站視覺及製作社群平台行銷素材(FB、IG)。<br>
+                                            因與公司發生勞資糾紛的狀況下而終止勞動契約。
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-5 mr-md-3"></div>
+                    </div>
+
+                    <!--  經歷_2 -->
                     <div class="row mt-3 mb-5  timeline-pointer">
                         <div class="col-11 col-md-5 ml-auto mt-1">
                             <div class="card">
                                 <div class="card-header odd">
-                                    <h6 class="card-title m-0 font-weight-bold">2018.05 ~ &nbsp; SOHO接案、學習進修</h6>
+                                    <h6 class="card-title m-0 font-weight-bold">2018.05 ~ 2019.01&nbsp; SOHO接案、學習進修</h6>
                                 </div>
                                 <div class="card-body">
                                     <p>暫離職場這段時間開始嘗試接案，其中比較相關的案子是一家女裝電商 Girl's Monday。<br>
                                         依照業主的需求，幫他們重新規劃成了 RWD 版型，增加影音介面功能，並優化了結帳流程。 <br>
-                                        <a href="image/rwd/gmd.jpg" class="px-3 mt-2 btn btn-outline-light btn-sm venobox">專案介紹</a>
+                                        <a href="image/rwd/gmd.jpg"
+                                            class="px-3 mt-2 btn btn-outline-light btn-sm venobox">專案介紹</a>
                                     </p>
                                     <hr>
                                     <small class="st-text-color">UI介面設計</small>
@@ -238,12 +275,13 @@
                         </div>
                         <div class="col-md-6 ml-md-2"></div>
                     </div>
-                    <!--  經歷_2 -->
+                    <!--  經歷_3 -->
                     <div class="row timeline-pointer mb-5 flex-md-row-reverse">
                         <div class="col-11 col-md-5 mr-md-auto ml-auto mt-1">
                             <div class="card">
                                 <div class="card-header even">
-                                    <h6 class="card-title m-0 font-weight-bold">2013.05 ~ 2018.05 &nbsp; 明洞國際 | 美編主任</h6>
+                                    <h6 class="card-title m-0 font-weight-bold">2013.05 ~ 2018.05 &nbsp; 明洞國際 | 美編主任
+                                    </h6>
                                 </div>
                                 <div class="card-body">
                                     <div class="card-text">
@@ -253,7 +291,8 @@
                                             一直經歷到轉型為保養品公司，並架設了獨立品牌購物網站，隨著商品種類的增加，社群媒體平台的興起，實體店面的成立，因而接觸到不同於以往的設計項目，也累積了
                                             產品視覺素材、店面輔銷物 及 各家社群平台行銷素材 等相關設計經驗。</p>
 
-                                        <p>在職期間這幾年，因為智慧型手機的興起，消費模式的轉變，讓我了解到現今電商不僅是要有吸引眼球的視覺，更要具有直覺性的操作行為、更具流暢的購物動線，進而順利地引導客戶進行轉單。</p>
+                                        <p>在職期間這幾年，因為智慧型手機的興起，消費模式的轉變，讓我了解到現今電商不僅是要有吸引眼球的視覺，更要具有直覺性的操作行為、更具流暢的購物動線，進而順利地引導客戶進行轉單。
+                                        </p>
 
                                         <p>公司的網站頁面架構主要都是我設計的，直到開始規劃 APP 的 UI 時才開始學習到相關的知識及規範，也同時加深了我對 UI 設計的興趣。</p>
                                     </div>
@@ -262,12 +301,13 @@
                         </div>
                         <div class="col-md-5 mr-md-3"></div>
                     </div>
-                    <!--  經歷_3 -->
+                    <!--  經歷_4 -->
                     <div class="row timeline-pointer">
                         <div class="col-11 col-md-5 ml-auto mt-1">
                             <div class="card">
                                 <div class="card-header odd">
-                                    <h6 class="card-title m-0 font-weight-bold">2012.10 ~ 2013.04 &nbsp; 名統百貨 | 總務專員</h6>
+                                    <h6 class="card-title m-0 font-weight-bold">2012.10 ~ 2013.04 &nbsp; 名統百貨 | 總務專員
+                                    </h6>
                                 </div>
                                 <div class="card-body">
                                     <p>主要負責 採購、固定資產、外包廠商 業務。<br>
@@ -299,10 +339,12 @@
             <div class="container portfolio-nav pb-5">
                 <div class="row">
                     <nav id="js-filters-awesome-work" class="col-12 text-center">
-                        <button data-filter="*" type="button" class="btn btn-light px-4 cbp-filter-item-active cbp-filter-item active">ALL</button>
+                        <button data-filter="*" type="button"
+                            class="btn btn-light px-4 cbp-filter-item-active cbp-filter-item active">ALL</button>
                         <button data-filter=".rwd" type="button" class="btn btn-light px-4 cbp-filter-item">RWD</button>
                         <button data-filter=".app" type="button" class="btn btn-light px-4 cbp-filter-item">APP</button>
-                        <button data-filter=".graphic" type="button" class="btn btn-light px-4 cbp-filter-item">平面設計</button>
+                        <button data-filter=".graphic" type="button"
+                            class="btn btn-light px-4 cbp-filter-item">平面設計</button>
                         </ul>
                     </nav>
                 </div>
@@ -313,7 +355,8 @@
                 <div class="portfolio-wrapper">
                     <div id="js-grid-awesome-work" class="cbp cbp-l-grid-work">
                         <div class="cbp-item app">
-                            <a href="image/app/mdmmd.jpg" class="cbp-caption venobox cbp-singlePage" data-gall="portfolio">
+                            <a href="image/app/mdmmd.jpg" class="cbp-caption venobox cbp-singlePage"
+                                data-gall="portfolio">
                                 <div class="cbp-caption-defaultWrap">
                                     <img src="image/app/mdmmd-cover.jpg" alt="明洞國際 APP">
                                 </div>
@@ -323,7 +366,8 @@
                             <div class="cbp-l-grid-work-desc">APP</div>
                         </div>
                         <div class="cbp-item rwd">
-                            <a href="image/rwd/mdmmd.jpg" class="cbp-caption venobox cbp-singlePage" data-gall="portfolio">
+                            <a href="image/rwd/mdmmd.jpg" class="cbp-caption venobox cbp-singlePage"
+                                data-gall="portfolio">
                                 <div class="cbp-caption-defaultWrap">
                                     <img src="image/rwd/mdmmd-cover.jpg" alt="明洞國際 RWD官網">
                                 </div>
@@ -333,7 +377,8 @@
                             <div class="cbp-l-grid-work-desc">RWD</div>
                         </div>
                         <div class="cbp-item rwd">
-                            <a href="image/rwd/gmd.jpg" class="cbp-caption venobox cbp-singlePage" data-gall="portfolio">
+                            <a href="image/rwd/gmd.jpg" class="cbp-caption venobox cbp-singlePage"
+                                data-gall="portfolio">
                                 <div class="cbp-caption-defaultWrap">
                                     <img src="image/rwd/gmd-cover.jpg" alt="Girl's Monday RWD官網">
                                 </div>
@@ -343,7 +388,8 @@
                             <div class="cbp-l-grid-work-desc">RWD</div>
                         </div>
                         <div class="cbp-item graphic">
-                            <a href="image/graphic/dm.jpg" class="cbp-caption venobox cbp-singlePage" data-gall="portfolio">
+                            <a href="image/graphic/dm.jpg" class="cbp-caption venobox cbp-singlePage"
+                                data-gall="portfolio">
                                 <div class="cbp-caption-defaultWrap">
                                     <img src="image/graphic/dm-cover.jpg" alt="美妝展 展場DM">
                                 </div>
@@ -353,7 +399,8 @@
                             <div class="cbp-l-grid-work-desc">平面設計</div>
                         </div>
                         <div class="cbp-item graphic">
-                            <a href="image/graphic/edm.jpg" class="cbp-caption venobox cbp-singlePage" data-gall="portfolio">
+                            <a href="image/graphic/edm.jpg" class="cbp-caption venobox cbp-singlePage"
+                                data-gall="portfolio">
                                 <div class="cbp-caption-defaultWrap">
                                     <img src="image/graphic/edm-cover.jpg" alt="美妝促銷EDM">
                                 </div>
@@ -363,7 +410,8 @@
                             <div class="cbp-l-grid-work-desc">平面設計</div>
                         </div>
                         <div class="cbp-item graphic">
-                            <a href="image/graphic/md.jpg" class="cbp-caption venobox cbp-singlePage" data-gall="portfolio">
+                            <a href="image/graphic/md.jpg" class="cbp-caption venobox cbp-singlePage"
+                                data-gall="portfolio">
                                 <div class="cbp-caption-defaultWrap">
                                     <img src="image/graphic/md-cover.jpg" alt="保養品商品內頁">
                                 </div>
@@ -373,7 +421,8 @@
                             <div class="cbp-l-grid-work-desc">平面設計</div>
                         </div>
                         <div class="cbp-item graphic">
-                            <a href="image/graphic/menu.jpg" class="cbp-caption venobox cbp-singlePage" data-gall="portfolio">
+                            <a href="image/graphic/menu.jpg" class="cbp-caption venobox cbp-singlePage"
+                                data-gall="portfolio">
                                 <div class="cbp-caption-defaultWrap">
                                     <img src="image/graphic/menu-cover.jpg" alt="酒吧menu">
                                 </div>
@@ -383,7 +432,8 @@
                             <div class="cbp-l-grid-work-desc">平面設計</div>
                         </div>
                         <div class="cbp-item graphic">
-                            <a href="image/graphic/poster.jpg" class="cbp-caption venobox cbp-singlePage" data-gall="portfolio">
+                            <a href="image/graphic/poster.jpg" class="cbp-caption venobox cbp-singlePage"
+                                data-gall="portfolio">
                                 <div class="cbp-caption-defaultWrap">
                                     <img src="image/graphic/poster-cover.jpg" alt="徵選活動海報">
                                 </div>
@@ -418,7 +468,8 @@
                             <div class="contact text-center">
                                 <strong>0922-111-104</strong>
                                 <a href="tel:+886-922111104">
-                                    <button type="button" class="btn btn-dark px-5"><i class="fas fa-phone align-baseline"></i>
+                                    <button type="button" class="btn btn-dark px-5"><i
+                                            class="fas fa-phone align-baseline"></i>
                                         Call</button>
                                 </a>
                                 <hr>
@@ -448,11 +499,13 @@
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
         crossorigin="anonymous"></script>
     <script src="script/all.js"></script>
     <!-- venobox JS -->
