--- a/index.html
+++ b/index.html
@@ -230,9 +230,11 @@
                                         </p>
                                         <p>
                                             APP上線後同時也規劃設計了產品的RWD官網，內容包含APP形象官網及跨境快遞網站，作品可以於面試現場展示。<br>
+                                            <a href="https://xd.adobe.com/view/b641b373-94fe-4049-6ef6-64cb908f5441-c070/"
+                                                target="_blank" class="px-3 mt-2 btn btn-outline-light btn-sm">prototype</a>
                                             <a href="https://apps.apple.com/tw/app/golagola-%E8%B7%A8%E5%A2%83%E5%BF%AB%E9%81%9E%E5%AA%92%E5%90%88%E5%B9%B3%E5%8F%B0/id1458075685"
                                                 target="_blank" class="px-3 mt-2 btn btn-outline-light btn-sm">APP介紹</a>
-                                            <small class="st-text-color">*APP可以下載，但沒有在營運</small>
+                                            <small class="st-text-color">*APP可以下載，暫無營運</small>
                                         </p>
                                         <hr>
                                         <p>
