--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
                 <p>Hello, I am Abo. Welcome to my design portfolio website.</p>
             </div>
 
-            <div class="arrow">
+            <div class="arrow text-center">
+                <p class="text-light">Scroll</p>
                 <img src="image/down-arrow.svg" width="30">
             </div>
             <video autoplay loop muted playsinline src="video/bg.mp4"></video>
