--- a/index.html
+++ b/index.html
@@ -445,6 +445,16 @@
                             <div class="cbp-l-grid-work-title">徵選活動海報</div>
                             <div class="cbp-l-grid-work-desc">平面設計</div>
                         </div>
+                        <div class="cbp-item graphic">
+                            <a href="https://drive.google.com/drive/folders/1hqyFMKTT8TDoS9Fci0thHGd5MSCmin2K?usp=share_link" class="cbp-caption"
+                                data-gall="portfolio" target="_blank">
+                                <div class="cbp-caption-defaultWrap">
+                                    <img src="image/graphic/seemore.png" alt="查看更多">
+                                </div>
+                                <div class="cbp-caption-activeWrap"></div>
+                            </a>
+                            <div class="cbp-l-grid-work-title">查看更多</div>
+                        </div>
 
                     </div>
 
